# JTCL

./: .gitignore  CMakeLists.txt  README.md  pom.xml
include/: application.h  command.h  exception.h  fs.h  logger.h  nc.h  platform.h  str.h  tcat.h
src/: application.c  command.c  filesystem.c  fs.c  main.c  nc.c  platform.c  str.c  strings.c  tcat.c
